New command line option --image-format for selecting the guest disk
image format.  Supported values are "dense" (the default) and
"sparse".

Reset the install timeout whenever a new set extraction or other
command is started by sysinst, and reduce the timeout to 1 hour.
This allows hangs in the install phase to be detected more quickly.

Reset the test timeout whenever a new test program is started by ATF,
and reduce the default timeout to 2 hours.  If you are passing a
non-default test timeout with the --test-timeout option, it can also
be reduced.  This allows hangs during test runs to be detected more
quickly.

Fix the sparc64 CD install which was broken in 2.1, by adding an
index=2 attribute to the virtual CD drive.

Make NetBSD-current/macppc boot by passing "-prom-env qemu_boot_hack=y"
to qemu-system-ppc.  From Joerg Sonnenberger.

- 2.1 released -

Add support for the newly added rescue set.

Deal with the sysinst changes of 2019-11-16.

Add support for macppc targets, based on a patch from Joerg
Sonnenberger.

Fix failure to install the sharesrc set due to curses optimization.

- 2.0 released -

In the test suite, run the tests in parallel to reduce the run time.

Downloads can now be interrupted using SIGINT (control-C).

On NetBSD, invoke makefs using its absolute path /usr/sbin/makefs
as /usr/sbin may not be in PATH.

Add support for Python 3.

When using qemu from pkgsrc, log the exact pkgsrc version of qemu and
glib2, including any nb suffix.

- 1.49 released -

Fix issue introduced in 1.48 that caused the Xen install kernel to be
used instead of the regular Xen kernel when booting the installed
system.

- 1.48 released -

When sysinst offers a choice of partitioning schemes, anita now uses
the one listed first.  Therefore, i386 and amd64 installs of versions
where sysinst offers GPT as the first choice will use GPT rather than
MBR as was previously the case.

Add support for NetBSD/hppa targets.

Support some upcoming sysinst UI changes.
